syntax="proto3";

option csharp_namespace = "GameService";

service GrpcGame{
    rpc GetGame(GetGameRequest) returns (GrpcGameResponse);

}

message GetGameRequest{
    string id = 1;
    string UserId = 2;
}

message GrpcGameModel{
    string gameName = 1;
    double price = 2;
    string videoUrl = 3;
    string gameDescription = 4;
    string minimumsystemRequirement = 5;
    string recommendedSystemRequirement = 6;
    string UserId = 7;
    string categoryId = 8;
}

message GrpcGameResponse{
    GrpcGameModel game = 1;
}